# hexstruction-patches-26

./: .copier-answers.hexdoc-hexcasting.yml  .copier-answers.yml  .gitignore  CHANGELOG.md  LICENSE  README.md  build.gradle  build.gradle.kts  gradle.properties  pyproject.toml  settings.gradle  settings.gradle.kts
.github/workflows/: build.yml  build_docs.yml  release.yml
buildSrc/src/main/kotlin/hexstruction/: java.gradle.kts  minecraft.gradle.kts  platform.gradle.kts
buildSrc/src/main/kotlin/hexstruction/utils/: mod-dependencies.gradle.kts
common/: build.gradle  build.gradle.kts
common/src/main/java/org/agent/hexstruction/: ActionUtils.kt  HexStructionPatterns.java  Hexstruction.java  StructureIota.kt  StructureManager.java  Utils.java
common/src/main/java/org/agent/hexstruction/misc/: BlockCheckerInterface.java  FilterableStructureTemplate.java  TimedBlockDisplay.java
common/src/main/java/org/agent/hexstruction/mixin/: BlockDisplayInvoker.java  PaletteAccessor.java  StructureTemplateAccessor.java
common/src/main/java/org/agent/hexstruction/patterns/: OpDisplayStructure.kt  OpGetBoundingBox.kt  OpGetTransformations.kt  OpLoadStructure.kt  OpMirrorFrontBack.kt  OpMirrorLeftRight.kt  OpRotateClockwise.kt  OpRotateCounterClockwise.kt  OpSaveStructure.kt  OpTestPattern.kt
common/src/main/java/org/agent/hexstruction/tags/: HexstructionBlockTags.java
common/src/main/kotlin/org/agent/hexstruction/: Hexstruction.kt  HexstructionAbstractions.kt  HexstructionClient.kt
common/src/main/kotlin/org/agent/hexstruction/casting/: ActionUtils.kt
common/src/main/kotlin/org/agent/hexstruction/casting/actions/patterns/: OpGetBoundingBox.kt  OpGetTransformations.kt  OpMirrorFrontBack.kt  OpMirrorLeftRight.kt  OpRotateClockwise.kt  OpRotateCounterClockwise.kt
common/src/main/kotlin/org/agent/hexstruction/casting/actions/spells/: OpDisplayStructure.kt  OpLoadStructure.kt  OpSaveStructure.kt
common/src/main/kotlin/org/agent/hexstruction/casting/iota/: StructureIota.kt
common/src/main/kotlin/org/agent/hexstruction/config/: HexstructionConfig.kt
common/src/main/kotlin/org/agent/hexstruction/networking/: HexstructionNetworking.kt
common/src/main/kotlin/org/agent/hexstruction/networking/handler/: ClientMessageHandler.kt  ServerMessageHandler.kt
common/src/main/kotlin/org/agent/hexstruction/networking/msg/: HexstructionMessage.kt  MsgSyncConfigS2C.kt
common/src/main/kotlin/org/agent/hexstruction/registry/: HexstructionActions.kt  HexstructionIotaTypes.kt  HexstructionRegistrar.kt
common/src/main/resources/: architectury.common.json  hexstruction-common.mixins.json  hexstruction.accesswidener  hexstruction.mixins.json
common/src/main/resources/assets/hexcasting/patchouli_books/thehexbook/en_us/entries/patterns/: structures.json
common/src/main/resources/assets/hexcasting/patchouli_books/thehexbook/en_us/entries/patterns/spells/: structure_spells.json
common/src/main/resources/assets/hexstruction/lang/: en_us.json
doc/: README.md  hexdoc.toml  nodemon.json
doc/resources/assets/hexstruction/lang/: en_us.flatten.json5
doc/src/hexdoc_hexstruction/: _hooks.py
fabric/: build.gradle  build.gradle.kts
fabric/src/main/java/org/agent/hexstruction/fabric/: HexstructionFabric.java
fabric/src/main/java/org/agent/hexstruction/fabric/client/: HexstructionFabricClient.java
fabric/src/main/java/org/agent/hexstruction/fabric/client/datagen/: DataGenerator.java
fabric/src/main/java/org/agent/hexstruction/fabric/tags/: Tags.java
fabric/src/main/kotlin/org/agent/hexstruction/fabric/: FabricHexstruction.kt  FabricHexstructionClient.kt  FabricHexstructionModMenu.kt  HexstructionAbstractionsImpl.kt
fabric/src/main/resources/: fabric.mod.json  hexstruction-fabric.mixins.json
forge/: build.gradle  build.gradle.kts
forge/src/main/java/org/agent/hexstruction/forge/: HexstructionForge.java
forge/src/main/java/org/agent/hexstruction/forge/mixin/: ForgeMixinConfigPlugin.java  MixinDatagenMain.java
forge/src/main/kotlin/org/agent/hexstruction/forge/: ForgeHexstruction.kt  ForgeHexstructionClient.kt  HexstructionAbstractionsImpl.kt
forge/src/main/resources/: hexstruction-forge.mixins.json  pack.mcmeta
gradle/: libs.versions.toml
